src/main/java/com/example/fas/repositories/services/serviceImpl/exceptions/user/invalid/ProviderIdInvalidException.java
package com.example.fas.repositories.services.serviceImpl.exceptions.user.invalid;

public class ProviderIdInvalidException extends RuntimeException {
    public ProviderIdInvalidException(String message) {
        super(message);
    }
}
